Apply changes from prototty roguelike example

--- a/web/index.html
+++ b/web/index.html
@@ -20,12 +20,12 @@ body {
 }
 @font-face {
     font-family:PxPlus_IBM_CGA;
-    src: url(PxPlus_IBM_CGAthin.ttf);
+    src: url(PxPlus_IBM_CGAthin-with-quadrant-blocks.ttf);
     font-weight: normal;
 }
 @font-face {
     font-family:PxPlus_IBM_CGA;
-    src: url(PxPlus_IBM_CGA.ttf);
+    src: url(PxPlus_IBM_CGA-with-quadrant-blocks.ttf);
     font-weight: bold;
 }
 </style>
