Fix scaling and wrapping issues on web

--- a/web/index.html
+++ b/web/index.html
@@ -9,14 +9,15 @@ body {
 #content {
     user-select: none;
     font-family: PxPlus_IBM_CGA;
-    font-size: 24px;
-    line-height: 24px;
+    font-size: 16px;
+    line-height: 16px;
     overflow-x: hidden;
     overflow-y: hidden;
+    white-space: nowrap;
 }
 #content > span {
-  width: 24px;
-  height: 24px;
+  width: 16px;
+  height: 16px;
 }
 @font-face {
     font-family:PxPlus_IBM_CGA;
